--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>score: <span id="result"></span></h3>
+      <h3>Score: <span id="result"></span></h3>
       <div id="grid"></div>
     </div>
     <script src="app.js"></script>
